--- a/arch/arm64/boot/dts/freescale/fsl-ls2080a-rdb.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-ls2080a-rdb.dts
@@ -154,21 +154,25 @@
 	/* AQR405 PHYs */
 	mdio2_phy1: emdio2_phy@1 {
 		compatible = "ethernet-phy-ieee802.3-c45";
+		interrupts = <0 1 0x4>; /* Level high type */
 		reg = <0x0>;
 		phy-connection-type = "xfi";
 	};
 	mdio2_phy2: emdio2_phy@2 {
 		compatible = "ethernet-phy-ieee802.3-c45";
+		interrupts = <0 2 0x4>; /* Level high type */
 		reg = <0x1>;
 		phy-connection-type = "xfi";
 	};
 	mdio2_phy3: emdio2_phy@3 {
 		compatible = "ethernet-phy-ieee802.3-c45";
+		interrupts = <0 4 0x4>; /* Level high type */
 		reg = <0x2>;
 		phy-connection-type = "xfi";
 	};
 	mdio2_phy4: emdio2_phy@4 {
 		compatible = "ethernet-phy-ieee802.3-c45";
+		interrupts = <0 5 0x4>; /* Level high type */
 		reg = <0x3>;
 		phy-connection-type = "xfi";
 	};
