thermal: qoriq: Add thermal management support for ARMv8 platform
The endianness of TMU on ARMv8 platforms is vary. To be specific, TMU is
big-endian on LS1043 but little-endian on LS2080. Regmap interface is
used to deal with the endianness issue instead of direct read/write.

Signed-off-by: Jia Hongtao <hongtao.jia@freescale.com>

--- a/drivers/thermal/Kconfig
+++ b/drivers/thermal/Kconfig
@@ -151,6 +151,7 @@ config QORIQ_THERMAL
 	tristate "Freescale QorIQ Thermal Monitoring Unit"
 	depends on CPU_THERMAL
 	depends on THERMAL_OF
+	select REGMAP_MMIO
 	help
 	  Enable thermal management based on Freescale QorIQ Thermal Monitoring
 	  Unit (TMU). It supports one critical trip point and one passive trip
