--- a/arch/powerpc/boot/dts/fsl/t1023si-post.dtsi
+++ b/arch/powerpc/boot/dts/fsl/t1023si-post.dtsi
@@ -471,7 +471,7 @@
 	};
 
 	tmu: tmu@f0000 {
-		compatible = "fsl,qoriq-tmu";
+		compatible = "fsl,qoriq-tmu", "fsl,t102x-tmu";
 		reg = <0xf0000 0x1000>;
 		interrupts = <18 2 0 0>;
 		fsl,tmu-range = <0xb0000 0xa0026 0x80048 0x30061>;
@@ -514,7 +514,8 @@
 				       0x00030001 0x0000000d
 				       0x00030002 0x00000019
 				       0x00030003 0x00000024>;
-		#thermal-sensor-cells = <0>;
+		little-endian;
+		#thermal-sensor-cells = <1>;
 	};
 
 	thermal-zones {
@@ -522,7 +523,7 @@
 			polling-delay-passive = <1000>;
 			polling-delay = <5000>;
 
-			thermal-sensors = <&tmu>;
+			thermal-sensors = <&tmu 0>;
 
 			trips {
 				cpu_alert: cpu-alert {
