--- a/arch/arm64/configs/freescale.config
+++ b/arch/arm64/configs/freescale.config
@@ -7,6 +7,7 @@ CONFIG_ARM64_VA_BITS_48=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=262144
 CONFIG_PRINTK_TIME=y
+CONFIG_PID_IN_CONTEXTIDR=y
 # iommu
 CONFIG_IOMMU_SUPPORT=y
 CONFIG_ARM_SMMU=y
