--- a/arch/arm64/configs/freescale.config
+++ b/arch/arm64/configs/freescale.config
@@ -60,3 +60,6 @@ CONFIG_HAS_FSL_QBMAN=y
 # network
 CONFIG_BRIDGE=m
 CONFIG_MACVLAN=y
+CONFIG_FSL_SDK_FMAN=y
+CONFIG_FMAN_ARM=y
+CONFIG_FSL_SDK_DPAA_ETH=y
