powerpc: defconfigs: Change CONFIG_MTD_SPI_NOR_BASE to CONFIG_MTD_SPI_NOR
The latest marco to enable spi-nor framework is CONFIG_MTD_SPI_NOR.

Signed-off-by: Hou Zhiqiang <Zhiqiang.Hou@nxp.com>

--- a/arch/powerpc/configs/corenet32_fmanv3l_smp_defconfig
+++ b/arch/powerpc/configs/corenet32_fmanv3l_smp_defconfig
@@ -83,7 +83,7 @@ CONFIG_MTD_M25P80=y
 CONFIG_MTD_NAND=y
 CONFIG_MTD_NAND_FSL_ELBC=y
 CONFIG_MTD_NAND_FSL_IFC=y
-CONFIG_MTD_SPI_NOR_BASE=y
+CONFIG_MTD_SPI_NOR=y
 CONFIG_PROC_DEVICETREE=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
