--- a/arch/arm64/configs/freescale.config
+++ b/arch/arm64/configs/freescale.config
@@ -20,6 +20,7 @@ CONFIG_NET_NS=y
 CONFIG_FSL_DPAA2_DCE=y
 CONFIG_FSL_DCE_FLOW_LIMIT=65536
 CONFIG_FSL_DCE_API_TIME_TRIAL=m
+CONFIG_LS_SOC_DRIVERS=y
 # mdio
 CONFIG_FSL_XGMAC_MDIO=y
 CONFIG_MDIO_BUS_MUX_MMIOREG=y
