--- a/arch/arm64/boot/dts/freescale/fsl-ls1043a-qds.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-ls1043a-qds.dts
@@ -101,12 +101,14 @@
 	num-cs = <2>;
 	bus-num = <0>;
 	status = "okay";
+	fsl,ddr-sampling-point = <4>;
 
 	qflash0: s25fl128s@0 {
 		compatible = "spansion,m25p80";
 		#address-cells = <1>;
 		#size-cells = <1>;
 		spi-max-frequency = <20000000>;
+		ddr-quad-read;
 		reg = <0>;
 	};
 };
