arm64: config: enable DFS in default config
Enable Dynamic Frequency Switching feature for ARM64 platform

Signed-off-by: Tang Yuantian <yuantian.tang@nxp.com>

--- a/arch/arm64/configs/freescale.config
+++ b/arch/arm64/configs/freescale.config
@@ -63,3 +63,17 @@ CONFIG_MACVLAN=y
 CONFIG_FSL_SDK_FMAN=y
 CONFIG_FMAN_ARM=y
 CONFIG_FSL_SDK_DPAA_ETH=y
+
+#
+# CPU Frequency scaling
+#
+CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_GOV_COMMON=y
+CONFIG_CPU_FREQ_STAT=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_QORIQ_CPUFREQ=y
