Fix can't display via HDMI port
Since scfg memory map conflicts with msi, modify scfg offset
to avoid this.

Signed-off-by: Alison Wang alison.wang@nxp.com
Signed-off-by: Meng Yi <meng.yi@nxp.com>

--- a/arch/arm/boot/dts/ls1021a.dtsi
+++ b/arch/arm/boot/dts/ls1021a.dtsi
@@ -181,7 +181,7 @@
 
 		scfg: scfg@1570000 {
 			compatible = "fsl,ls1021a-scfg", "syscon";
-			reg = <0x0 0x1570000 0x0 0x10000>;
+			reg = <0x0 0x1570000 0x0 0xd04>;
 			big-endian;
 		};
 
