xenomai: Add Fman independent mode support for LS1046ARDB
Add Fman independent mode support for xenomai.

Signed-off-by: xu chen <xu.chen_3@nxp.com>

--- a/arch/arm64/boot/dts/freescale/qoriq-dpaa-eth.dtsi
+++ b/arch/arm64/boot/dts/freescale/qoriq-dpaa-eth.dtsi
@@ -65,7 +65,7 @@ fsldpaa: fsl,dpaa {
 };
 
 fslfman: fsl,fmanim {
-	compatible = "fsl,ls1043a-dpaa", "simple-bus", "fsl,dpaa";
+	compatible = "fsl,ls1043a-dpaa";
 	ethernet@0 {
 		compatible = "fsl,im-ethernet";
 		fsl,fman-mac = <&enet0>;
