--- a/arch/arm64/boot/dts/freescale/fsl-ls1046a-rdb-sdk.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-ls1046a-rdb-sdk.dts
@@ -69,6 +69,26 @@
 		compatible = "fsl,dpa-ethernet";
 		fsl,fman-mac = <&enet7>;
 	};
+	ethernet@0 {
+		compatible = "fsl,im-ethernet";
+		fsl,fman-mac = <&enet2>;
+		fpmevt-sel = <0>;
+	};
+	ethernet@1 {
+		compatible = "fsl,im-ethernet";
+		fsl,fman-mac = <&enet3>;
+		fpmevt-sel = <1>;
+	};
+	ethernet@2 {
+		compatible = "fsl,im-ethernet";
+		fsl,fman-mac = <&enet4>;
+		fpmevt-sel = <2>;
+	};
+	ethernet@3 {
+		compatible = "fsl,im-ethernet";
+		fsl,fman-mac = <&enet5>;
+		fpmevt-sel = <3>;
+	};
 };
 
 &fman0 {
